--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,14 @@ services:
       image: rabbitmq:latest
       networks:
         - greenhouse
+    postgres:
+      image: postgres:latest
+      networks:
+        - greenhouse
+      volumes:
+        - ./postgresql/data:/var/lib/postgres/data
+      env_file:
+        - .env
     humidity_server:
       build: .
       networks:
@@ -12,6 +20,7 @@ services:
         - .:/code
       depends_on:
         - rabbit
+      command: "./start.sh"
 
 networks:
   greenhouse:
